@@ -1,5 +1,10 @@
 2008-12-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* src/thbrk/brk-maximal.c (brk_pool_get_node, brk_maximal_do):
+	Get rid of unused arg 's' for brk_pool_get_node().
+
+2008-12-26  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* data/tdict-ict.txt: Add words.
 
 2008-12-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>
@@ -1546,13 +1551,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.164 2008-12-26 00:46:34 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.165 2008-12-26 01:39:09 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.164 2008-12-26 00:46:34 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.165 2008-12-26 01:39:09 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
